force-app/main/default/objects/Territory_Member__c/Territory_Member__c.object-meta.xml
<CustomObject>
    <label>Territory Member</label>
    <nameField>
        <displayFormat>TMN-{000}</displayFormat>
        <label>Territory Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>