force-app/main/default/objects/Territory_Member__c/fields/Territory_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Territory_Member_Role__c</fullName>
    <label>Territory Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>SDR</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
            <value>
                <fullName>CSA</fullName>
                <isActive>false</isActive>
                <label>CSA</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <isActive>false</isActive>
                <label>SE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>